@startuml

title __WAVE's Class Diagram__\n

  namespace de.dhbw {
    namespace game {
      namespace wave {
        abstract class de.dhbw.game.wave.AWave {
            - count : int
            - enemies : List<AEnemy>
            - speed : int
            + calculateDelay()
            {abstract} + generate()
            + getWaveSpeed()
            + hasNext()
            + next()
            ~ AWave()
            ~ addEnemy()
        }
      }
    }
  }
  

  namespace de.dhbw {
    namespace game {
      namespace wave {
        class de.dhbw.game.wave.Wave {
            - waveCompositions : List<WaveComposition>
            + Wave()
            + addWaveCompositions()
            + generate()
        }
      }
    }
  }
  

  namespace de.dhbw {
    namespace game {
      namespace wave {
        class de.dhbw.game.wave.WaveComposition {
            - amount : int
            - level : int
            + WaveComposition()
            + getAmount()
            + getEnemyType()
            + getLevel()
        }
      }
    }
  }
  

  de.dhbw.game.wave.AWave -up-|> de.dhbw.game.ATimerUsage
  de.dhbw.game.wave.Wave -up-|> de.dhbw.game.wave.AWave
  de.dhbw.game.wave.WaveComposition o-- de.dhbw.game.EnemyType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
